# rust-square-api-client-lib

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: lib.rs  square_client.rs
src/api/: apple_pay_api.rs  base_api.rs  cards_api.rs  catalog_api.rs  checkout_api.rs  customer_groups_api.rs  customer_segments_api.rs  customers_api.rs  gift_card_activities_api.rs  gift_cards_api.rs  inventory_api.rs  invoices_api.rs  locations_api.rs  mod.rs  orders_api.rs  payments_api.rs  refunds_api.rs  subscriptions_api.rs  team_api.rs
src/config/: cargo_package_info.rs  configuration.rs  environment.rs  mod.rs
src/http/: headers.rs  http_response.rs  mod.rs
src/http/client/: http_client.rs  http_context.rs  mod.rs  (+1 more)
src/models/: ach_details.rs  additional_recipient.rs  address.rs  afterpay_details.rs  application_details.rs  bank_account_payment_details.rs  batch_change_inventory_request.rs  batch_change_inventory_response.rs  batch_delete_catalog_objects_request.rs  batch_delete_catalog_objects_response.rs  batch_retrieve_catalog_objects_request.rs  batch_retrieve_catalog_objects_response.rs  batch_retrieve_inventory_changes_request.rs  batch_retrieve_inventory_changes_response.rs  batch_retrieve_inventory_counts_request.rs  batch_retrieve_inventory_counts_response.rs  batch_retrieve_orders_request.rs  batch_retrieve_orders_response.rs  batch_upsert_catalog_objects_request.rs  batch_upsert_catalog_objects_response.rs  bulk_create_team_members_request.rs  bulk_create_team_members_response.rs  bulk_update_team_members_request.rs  bulk_update_team_members_response.rs  business_hours.rs  business_hours_period.rs  buy_now_pay_later_details.rs  calculate_order_request.rs  calculate_order_response.rs  cancel_invoice_request.rs  cancel_invoice_response.rs  cancel_payment_by_idempotency_key_request.rs  cancel_payment_by_idempotency_key_response.rs  cancel_payment_response.rs  cancel_subscription_response.rs  card.rs  card_payment_details.rs  card_payment_timeline.rs  cash_payment_details.rs  catalog_category.rs  (+314 more)
(+114 files in other folders)
