[package]
name = "rust-square-api-client-lib"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "=0.1.53"
chrono = { version = "=0.4.19", features = ["serde"] }
infer = "=0.7.0"
log = "=0.4.16"
reqwest = { version = "=0.11.10", features = ["json", "multipart"] }
reqwest-middleware = "=0.1.5"
reqwest-retry = "=0.1.4"
package_info = "=0.1.0"
package_info_derive = "=0.1.0"
rustc_version_runtime = "=0.2.1"
serde = { version = "=1.0.136", features = ["derive"] }
serde_json = "=1.0.79"
